--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find - Kokoa Talk</title>
+    <title>More - Kokoa Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -24,66 +24,65 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Find</h1>
+      <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-
-        <span>
-          <i class="fas fa-cog fa-lg">
-            <div class="reddot"></div>
-          </i>
+        <span
+          ><i class="fas fa-search fa-lg"></i>
+          <span><i class="fas fa-music fa-lg"></i></span>
+        </span>
+        <span
+          ><a href="setting.html"
+            ><i class="fas fa-cog fa-lg"> <div class="reddot"></div> </i
+          ></a>
         </span>
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen more-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://lh3.googleusercontent.com/ogw/ADea4I7d32Jp8tXrT8HH6CBF1M6HyqzjkuG2rYt7PNDf0Q=s83-c-mo"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Jay</h4>
+            <h6 class="user-component__subtitle">+82 10 4303 4557</h6>
+            <span class="user-component__mark">!</span>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <i class="far fa-comment-alt fa-2x"></i>
+        </div>
+      </div>
       <div class="icon-row">
         <div class="icon-row__icon">
-          <i class="fas fa-qrcode"></i><span>QR</span>
+          <i class="far fa-calendar"></i><span>Calender</span>
         </div>
         <div class="icon-row__icon">
-          <i class="far fa-address-book"></i><span>Add by Contact</span>
+          <i class="far fa-grin-alt"></i><span>Emoticons</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fas fa-fingerprint"></i><span></span>Add by ID
+          <i class="fas fa-brush"></i><span>Themes</span>
         </div>
         <div class="icon-row__icon">
-          <i class="far fa-envelope"></i><span></span>Invite
+          <i class="fas fa-file-invoice-dollar"></i><span>Account</span>
         </div>
       </div>
-      <div class="recommended-friends">
-        <h6 class="rcommended-friedns__title">Recommended Friends</h6>
-        <span>You have no recommended friends.</span>
-      </div>
-      <div class="open-chat">
-        <div class="open-chat__header">
-          <h4 class="open-chat__title">Open Chat</h4>
-          <span
-            >Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i
-          ></span>
-        </div>
-        <div class="open-post">
-          <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bst#army#friends</h6>
-            <div class="open-post__members">
-              <img
-                src="https://lh3.googleusercontent.com/ogw/ADea4I7d32Jp8tXrT8HH6CBF1M6HyqzjkuG2rYt7PNDf0Q=s83-c-mo"
-              />
-              <span class="open-psot__member-count">802 members</span>
-              <div class="divider"></div>
-              <span class="open-post__member-status">Active</span>
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">Suggestions</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-img">
+              <i class="fas fa-quote-right"></i>
             </div>
+            <span class="more-suggestions__icon-text">KaKao story</span>
           </div>
-          <div class="open-post__column">
-            <div class="open-post__photo">
-              <img
-                src="https://lh3.googleusercontent.com/ogw/ADea4I7d32Jp8tXrT8HH6CBF1M6HyqzjkuG2rYt7PNDf0Q=s83-c-mo"
-              />
-              <div class="open-post__heart-count">
-                <i class="fas fa-heart fa-xs"></i><span>326</span>
-              </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-img">
+              <i class="fas fa-quote-right"></i>
             </div>
+            <span class="more-suggestions__icon-text">KaKao story</span>
           </div>
         </div>
       </div>
