--- a/chats.html
+++ b/chats.html
@@ -64,7 +64,7 @@
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="chat.html">
+          <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
             <i class="fas fa-comment fa-2x"></i
           ></a>
@@ -82,7 +82,9 @@
         </li>
       </ul>
     </nav>
-
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/7e32c02b2f.js"
       crossorigin="anonymous"
