--- a/find.html
+++ b/find.html
@@ -29,9 +29,8 @@
         <span><i class="fas fa-search fa-lg"></i></span>
 
         <span>
-          <i class="fas fa-cog fa-lg">
-            <div class="reddot"></div>
-          </i>
+          <i class="fas fa-cog fa-lg"></i>
+          <div class="reddot"></div>
         </span>
       </div>
     </header>
@@ -115,7 +114,9 @@
         </li>
       </ul>
     </nav>
-
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/7e32c02b2f.js"
       crossorigin="anonymous"
