--- a/more.html
+++ b/more.html
@@ -31,9 +31,8 @@
           <span><i class="fas fa-music fa-lg"></i></span>
         </span>
         <span
-          ><a href="setting.html"
-            ><i class="fas fa-cog fa-lg"> <div class="reddot"></div> </i
-          ></a>
+          ><a href="setting.html"><i class="fas fa-cog fa-lg"> </i></a>
+          <div class="reddot"></div>
         </span>
       </div>
     </header>
@@ -114,6 +113,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/7e32c02b2f.js"
