--- a/setting.html
+++ b/setting.html
@@ -88,6 +88,10 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/7e32c02b2f.js"
       crossorigin="anonymous"
