--- a/chat.html
+++ b/chat.html
@@ -74,7 +74,7 @@
       </div>
     </form>
     <div id="no-mobile">
-      <span>Your screen is too big</span>
+      <span>Your screen is so Huge 😛</span>
     </div>
     <script
       src="https://kit.fontawesome.com/7e32c02b2f.js"
