--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Kokoa Talk</title>
+    <title>Welcome to Wak Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -24,9 +24,9 @@
     </div>
 
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welocome to Kokaoclone</h1>
+      <h1 class="welcome-header__title">Welocome to Wak Talk</h1>
       <p class="welcome-header__text">
-        If you have a Kokoa Account, log in with your email or phone number.
+        If you have a Wak Account, log in with your email or phone number.
       </p>
     </header>
 
@@ -39,7 +39,7 @@
     </form>
 
     <div id="no-mobile">
-      <span>Your screen is too big</span>
+      <span>Your screen is so Huge 😛</span>
     </div>
 
     <script
