--- a/setting.html
+++ b/setting.html
@@ -89,7 +89,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big</span>
+      <span>Your screen is so Huge 😛</span>
     </div>
 
     <script
